added fun state

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,15 @@
 				<br><br> 
 				I am a Mathematics and Computer Science major at Middlebury College passionate about technology and its potential to improve lives.
 				<br><br>
-				In my free time, I tinker with algorithms, pore over proofs and combine casual ideas.
+				I enjoy tinkering with algorithms, poring over proofs and exploring interesting ideas. In my free time, I help others through <a href="http://www.projecttaom.org" target="_blank">Project Taom</a>, a Non-Profit I helped found.
 				<br><br>
 				If my work intrigues you, or if you ever need a partner for Programming Competitions, <a href="mailto:dchia@middlebury.edu?Subject=Greetings!" id="contact">click this</a>.	
 				</p>
+				<p>
+				Occasionally, I like to <span id = "fun" style="text-decoration: underline">have fun</span>.
+				</p>
 			</div>
 			<div id = "links">
-				
 				<a id = "resume-logo" target="_blank" href="resume.pdf"> <img class = "logo" src="images/resume-logo-grey.png" onmouseover=this.src="images/resume-logo-green.png" onmouseout=this.src="images/resume-logo-grey.png"></a>
 				<a id = "github-logo" href="https://github.com/davinchia" target="_blank"><img class = "logo" src="images/github-logo-grey.png" onmouseover=this.src="images/github-logo-orange.png" onmouseout=this.src="images/github-logo-grey.png"></a>
 				<a id = "linkedin-logo" href="https://www.linkedin.com/pub/davin-chia/aa/243/663" target="_blank"><img class = "logo" src="images/linkedin-logo-grey.png"onmouseover=this.src="images/linkedin-logo-red.png" onmouseout=this.src="images/linkedin-logo-grey.png"></a>
@@ -37,5 +39,6 @@
 		</div>
 	</div>
 </body>
+<script src="javascripts/howler.js"></script>
 <script src="javascripts/myscript.js"></script>
 </html>
