--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 				<br><br> 
 				I am a Mathematics and Computer Science major at Middlebury College passionate about technology and its potential to improve lives.
 				<br><br>
-				I enjoy tinkering with algorithms, poring over proofs and exploring interesting ideas. In my free time, I help others through <a href="http://www.projecttaom.org" target="_blank">Project Taom</a>, a Non-Profit I helped found.
+				In my free time, I enjoy tinkering with algorithms, poring over proofs and exploring interesting ideas. I also help others through <a href="http://www.projecttaom.org" target="_blank">Project Taom</a>, a Non-Profit I helped found.
 				<br><br>
 				If my work intrigues you, or if you ever need a partner for Programming Competitions, <a href="mailto:dchia@middlebury.edu?Subject=Greetings!" id="contact">click this</a>.	
 				</p>
