reduce size of images

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<div id = "write-up">
 				<p> 
-				Hi, my name is DAVIN CHIA. 
+				Hi, my name is <span style="font-size: 30px"> &nbsp;DAVIN CHIA</span>. 
 				<br><br> 
 				I am a Mathematics and Computer Science major at Middlebury College passionate about technology and its potential to improve lives.
 				<br><br>
