--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Davin Chia</title>
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalise.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
@@ -24,17 +25,33 @@
 				<br><br>
 				In my free time, I enjoy tinkering with algorithms, poring over proofs and exploring interesting ideas. I do my bit for the world through <a href="http://www.projecttaom.org" target="_blank">Project Taom</a>, a Non-Profit I helped found.
 				<br><br>
-				If my work intrigues you, or if you ever need a partner for Programming Competitions, <a href="mailto:dchia@middlebury.edu?Subject=Greetings!" id="contact">click this</a>.	
+				If my work intrigues you, or if you ever need a partner for Programming Competitions, <a href="mailto:dchia@middlebury.edu?Subject=Greetings!" id="contact-link">click this</a>.	
 				</p>
 				<p>
 				Occasionally, I like to <span id = "fun" style="text-decoration: underline">have fun</span>.
 				</p>
 			</div>
 			<div id = "links">
-				<a id = "resume-logo" target="_blank" href="resume.pdf"> <img class = "logo" src="images/resume-logo-grey.png" onmouseover=this.src="images/resume-logo-green.png" onmouseout=this.src="images/resume-logo-grey.png"></a>
-				<a id = "github-logo" href="https://github.com/davinchia" target="_blank"><img class = "logo" src="images/github-logo-grey.png" onmouseover=this.src="images/github-logo-orange.png" onmouseout=this.src="images/github-logo-grey.png"></a>
-				<a id = "linkedin-logo" href="https://www.linkedin.com/pub/davin-chia/aa/243/663" target="_blank"><img class = "logo" src="images/linkedin-logo-grey.png"onmouseover=this.src="images/linkedin-logo-red.png" onmouseout=this.src="images/linkedin-logo-grey.png"></a>
-				<a id = "contact-logo" href="mailto:dchia@middlebury.edu?Subject=Greetings!"><img id = "contact-logo" class = "logo" src="images/contact-logo-grey.png" onmouseover=this.src="images/contact-logo-bright.png" onmouseout=this.src="images/contact-logo-grey.png"></a>
+				<a id = "resume" target="_blank" href="resume.pdf"> 
+					<img id = "resume-logo-grey" class = "logo" src="images/resume-logo-grey.png"><img id = "resume-logo-bright" class = "logo hide" src="images/resume-logo-bright.png"> 
+				</a>
+
+				<a id = "github" href="https://github.com/davinchia" target="_blank">
+					<img id = "github-logo-grey" class = "logo" src="images/github-logo-grey.png">
+					<img id = "github-logo-bright" class = "logo hide" src="images/github-logo-orange.png">
+				</a>
+
+
+				<a id = "linkedin" href="https://www.linkedin.com/pub/davin-chia/aa/243/663" target="_blank">
+					<img id = "linkedin-logo-grey" class = "logo" src="images/linkedin-logo-grey.png">
+					<img id = "linkedin-logo-bright" class = "logo hide" src="images/linkedin-logo-bright.png">
+				</a>
+				
+				<a id = "contact" href="mailto:dchia@middlebury.edu?Subject=Greetings">
+					<img id = "contact-logo-grey" class = "logo" src="images/contact-logo-grey.png">
+					<img id = "contact-logo-bright" class = "logo hide" src="images/contact-logo-bright.png">
+				</a>
+			
 			</div>
 		</div>
 	</div>
